[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Other/Difficulte.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/sprite156_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GUI/Theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://Sprites/GUI/Dials/3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/GUI/Dials/2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/GUI/Dials/1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/GUI/Dials/102.png" type="Texture" id=7]
[ext_resource path="res://Sprites/GUI/Dials/100.png" type="Texture" id=8]
[ext_resource path="res://Sprites/GUI/Dials/101.png" type="Texture" id=9]
[ext_resource path="res://Sprites/GUI/Dials/200.png" type="Texture" id=10]
[ext_resource path="res://Sprites/GUI/Dials/202.png" type="Texture" id=11]
[ext_resource path="res://Sprites/GUI/Dials/203.png" type="Texture" id=12]
[ext_resource path="res://Sprites/GUI/Dials/300.png" type="Texture" id=13]
[ext_resource path="res://Sprites/GUI/Dials/307.png" type="Texture" id=14]
[ext_resource path="res://Sprites/GUI/Dials/309.png" type="Texture" id=15]
[ext_resource path="res://Sprites/GUI/Dials/406.png" type="Texture" id=16]
[ext_resource path="res://Sprites/GUI/Dials/400.png" type="Texture" id=17]
[ext_resource path="res://Sprites/GUI/Dials/412.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Player/mouse.tscn" type="PackedScene" id=19]

[node name="Difficulte" type="Node"]
script = ExtResource( 1 )

[node name="fd" type="Sprite" parent="."]
position = Vector2( 509.423, 284.607 )
scale = Vector2( 5.26845, 6.09318 )
texture = ExtResource( 2 )

[node name="Titre" type="Label" parent="."]
margin_top = 16.0
margin_right = 681.0
margin_bottom = 44.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 3 )
text = "NIVEAUX DE DIFFICULTÉ"
align = 1

[node name="SousTitre" type="Label" parent="."]
margin_left = 2.0
margin_top = 53.0
margin_right = 1708.0
margin_bottom = 81.0
rect_scale = Vector2( 0.6, 0.6 )
theme = ExtResource( 3 )
text = "Laissez par défaut pour une expérience normale de jeu."
align = 1

[node name="Veget" type="Node2D" parent="."]
position = Vector2( 0, 24.3435 )

[node name="s0" type="Sprite" parent="Veget"]
position = Vector2( 327.025, 60 )
texture = ExtResource( 4 )

[node name="s1" type="Sprite" parent="Veget"]
position = Vector2( 481.089, 60 )
texture = ExtResource( 5 )

[node name="s2" type="Sprite" parent="Veget"]
position = Vector2( 627.3, 60 )
texture = ExtResource( 6 )

[node name="SliderV" type="HSlider" parent="Veget"]
margin_left = 327.272
margin_top = 90.0
margin_right = 567.272
margin_bottom = 106.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 3 )
min_value = 0.1
max_value = 200.0
step = 0.1
value = 100.0
ticks_on_borders = true

[node name="Label" type="Label" parent="Veget"]
margin_left = 0.136047
margin_top = 107.983
margin_right = 1021.14
margin_bottom = 135.983
theme = ExtResource( 3 )
text = "Vie Maximale"
align = 1

[node name="Label2" type="Label" parent="Veget"]
margin_left = 490.0
margin_top = 88.0
margin_right = 530.0
margin_bottom = 116.0
theme = ExtResource( 3 )
text = "0"
align = 1

[node name="Progfer" type="Node2D" parent="."]
position = Vector2( -286, 153.221 )

[node name="s0" type="Sprite" parent="Progfer"]
position = Vector2( 346.185, 60 )
texture = ExtResource( 7 )

[node name="s1" type="Sprite" parent="Progfer"]
position = Vector2( 481.089, 60 )
texture = ExtResource( 8 )

[node name="s2" type="Sprite" parent="Progfer"]
position = Vector2( 627.3, 60 )
texture = ExtResource( 9 )

[node name="SliderP" type="HSlider" parent="Progfer"]
margin_left = 327.272
margin_top = 90.0
margin_right = 567.272
margin_bottom = 106.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 3 )
min_value = 0.5
max_value = 4.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="Progfer"]
margin_left = 0.136047
margin_top = 107.983
margin_right = 1021.14
margin_bottom = 135.983
theme = ExtResource( 3 )
text = "Vie des Ennemis"
align = 1

[node name="Label2" type="Label" parent="Progfer"]
margin_left = 490.0
margin_top = 88.0
margin_right = 530.0
margin_bottom = 116.0
theme = ExtResource( 3 )
text = "x0"
align = 1

[node name="Doublix" type="Node2D" parent="."]
position = Vector2( -286, 328 )

[node name="s0" type="Sprite" parent="Doublix"]
position = Vector2( 338.08, 60 )
texture = ExtResource( 10 )

[node name="s1" type="Sprite" parent="Doublix"]
position = Vector2( 481.089, 60 )
texture = ExtResource( 11 )

[node name="s2" type="Sprite" parent="Doublix"]
position = Vector2( 627.3, 60 )
texture = ExtResource( 12 )

[node name="SliderD" type="HSlider" parent="Doublix"]
margin_left = 327.272
margin_top = 90.0
margin_right = 567.272
margin_bottom = 106.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 3 )
max_value = 36000.0
step = 1800.0
ticks_on_borders = true

[node name="Label" type="Label" parent="Doublix"]
margin_top = 108.0
margin_right = 1021.0
margin_bottom = 138.0
theme = ExtResource( 3 )
text = "Temps Imparti (0 = Infini)"
align = 1

[node name="Label2" type="Label" parent="Doublix"]
margin_left = 490.0
margin_top = 88.0
margin_right = 530.0
margin_bottom = 116.0
theme = ExtResource( 3 )
text = "0h"
align = 1

[node name="Tog" type="Node2D" parent="."]
position = Vector2( 270, 153 )

[node name="s0" type="Sprite" parent="Tog"]
position = Vector2( 357.617, 60 )
texture = ExtResource( 13 )

[node name="s1" type="Sprite" parent="Tog"]
position = Vector2( 494.058, 60 )
texture = ExtResource( 14 )

[node name="s2" type="Sprite" parent="Tog"]
position = Vector2( 627.3, 60 )
texture = ExtResource( 15 )

[node name="SliderT" type="HSlider" parent="Tog"]
margin_left = 327.272
margin_top = 90.0
margin_right = 567.272
margin_bottom = 106.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 3 )
ticks_on_borders = true

[node name="Label" type="Label" parent="Tog"]
margin_left = 0.136047
margin_top = 107.983
margin_right = 1021.14
margin_bottom = 135.983
theme = ExtResource( 3 )
text = "Nombre de Morts Autorisées (0 = Infini)"
align = 1

[node name="Label2" type="Label" parent="Tog"]
margin_left = 490.0
margin_top = 88.0
margin_right = 530.0
margin_bottom = 116.0
theme = ExtResource( 3 )
text = "0"
align = 1

[node name="Doobliks" type="Node2D" parent="."]
position = Vector2( 270, 328 )

[node name="s0" type="Sprite" parent="Doobliks"]
position = Vector2( 342.828, 60 )
texture = ExtResource( 16 )

[node name="s1" type="Sprite" parent="Doobliks"]
position = Vector2( 484.957, 60 )
texture = ExtResource( 17 )

[node name="s2" type="Sprite" parent="Doobliks"]
position = Vector2( 627.3, 60 )
texture = ExtResource( 18 )

[node name="SliderO" type="HSlider" parent="Doobliks"]
margin_left = 327.272
margin_top = 90.0
margin_right = 567.272
margin_bottom = 106.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 3 )
min_value = 0.5
max_value = 4.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="Label" type="Label" parent="Doobliks"]
margin_left = 0.136047
margin_top = 107.983
margin_right = 1021.14
margin_bottom = 135.983
theme = ExtResource( 3 )
text = "Puissance des Ennemis"
align = 1

[node name="Label2" type="Label" parent="Doobliks"]
margin_left = 490.0
margin_top = 88.0
margin_right = 530.0
margin_bottom = 116.0
theme = ExtResource( 3 )
text = "x0"
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 404.0
margin_top = 501.0
margin_right = 603.0
margin_bottom = 547.0
theme = ExtResource( 3 )
text = "Valider"

[node name="mouse" parent="." instance=ExtResource( 19 )]
scale = Vector2( 3, 3 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
